--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "react-dom": "^19.0.0",
     "react-fast-marquee": "^1.6.5",
     "react-hook-form": "^7.54.2",
+    "react-icons": "^5.5.0",
     "react-player": "^2.16.0",
-    "react-toastify": "^11.0.3"
+    "react-toastify": "^11.0.3",
+    "swiper": "^11.2.4"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
